pxc/tests/test_194_ephemeral/eph11.px

public namespace eph11;
import core::common -;

function void test_ephemeral_escape(int x)
{
  slice{int} s;
  {
    varray{int} a;
    a.push_back(x);
    s = a; // error
  }
}

{
  test_ephemeral_escape(3);
}
